# offboard_controller

./: CMakeLists.txt  README.md  package.xml
cfg/: params.yaml
inc/: controller.hpp  interactive_waypoint.hpp  min_snap_traj.hpp  offboard_controller.hpp  polynomial.hpp  state.hpp
launch/: offboard_controller.launch.py
src/: controller.cpp  interactive_waypoint.cpp  min_snap_traj.cpp  offboard_controller.cpp  polynomial.cpp
