<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>offboard_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="scheuer.luca@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_ros_com</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>apriltag_msgs</depend>
  <depend>trajectory_msgs</depend>
  <exec_depend>ros2launch</exec_depend>
 
  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
